--- a/src/index.pug
+++ b/src/index.pug
@@ -1,7 +1,15 @@
 doctype html
-html
+html(lang="en")
   head
-    meta(charset="UTF-8")
+    meta(charset="utf-8")
+    meta(name="viewport" content="width=device-width, initial-scale=1")
+    title Power of Code
+    link(rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w" crossorigin="anonymous")
     link(rel="stylesheet" href="site.css")
-    title
   body
+    .top
+      h1.thick.animation Power
+    .bottom.animation
+      h1.slim.animation of Code
+    .overlay.animation
+    script(src="index.js")
