--- a/src/index.pug
+++ b/src/index.pug
@@ -5,11 +5,16 @@ html(lang="en")
     meta(name="viewport" content="width=device-width, initial-scale=1")
     title Power of Code
     link(rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w" crossorigin="anonymous")
+    link(href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet")
     link(rel="stylesheet" href="site.css")
   body
+    .text.animation
+      p.
+        If one thing comes to mind about code, it's the amount of potential that it possesses. From making video games to operating space ships, a world of opportunities opens up with code. Unfortunately, many simply don't try to learn it because of a false belief that code is difficult and boring. I have created a small introduction to try to prove the opposite. Give it a shot!
+      button.pure-button Start 
+    .bottom.animation.animation-end
+      h1.slim.animation.animation-end of Code
     .top
       h1.thick.animation Power
-    .bottom.animation
-      h1.slim.animation of Code
-    .overlay.animation
+    .overlay.animation.animation-end
     script(src="index.js")
