--- a/src/site.sass
+++ b/src/site.sass
@@ -19,10 +19,16 @@
   animation-play-state: paused
   animation-duration: 1s
 
+.pure-button
+  font-family: Big_John
+  height: 10vh
+  font-size: 2rem
+
 html, body
   height: 100%
   overflow: hidden
-  background-color: #F1EFEB
+  width: 100%
+  // background-color: #F1EFEB
 
 h1
   text-align: center
@@ -34,16 +40,38 @@ h1
 .thick
   font-family: Big_John
 
-.top, .bottom
+p
+  font-family: Playfair Display
+  font-size: 2rem
+
+.top, .bottom, .text
   position: absolute
   height: 50%
   width: 100%
+  margin: 0 auto 
 
 .top h1
   position: absolute
   bottom: -5%
   width: 100%
   animation-name: text
+
+.top
+  top: 0
+
+.text
+  height: 20%
+  width: 30%
+  position: static
+  margin-top: 35%
+  animation-name: hidden-text
+  text-align: justify
+
+.text button
+  width: 10%
+  margin: auto
+  display: flex
+  justify-content: center
 
 .bottom
   border: 1px solid black
@@ -63,8 +91,8 @@ h1
   bottom: 0
   margin: auto auto
 
-  width: 40%
-  height: 40%
+  width: 50%  
+  height: 50%
   border: 1px solid black
   animation-name: overlay
   animation-duration: 2s
@@ -72,23 +100,20 @@ h1
 .overlay:hover
   background-color: rgba(0, 0, 0, .1) 
 
-
 @keyframes overlay
-  50%
-    transform: rotate(90deg)
+  30%
     border-radius: 50%
     height: 40vw
     width: 40vw
+    transform: scale(1)
   100%
-    transform: scale(100)
+    transform: scale(3)
     opacity: 0
-    visibility: hidden
 
 @keyframes panel
   100%
     width: 0
     height: 100%
-    visibility: hidden
 
 @keyframes panel-text
   100%
@@ -96,11 +121,8 @@ h1
 
 @keyframes text
   100%
-    transform: translateY(95%)
+    transform: translateY(-20vh)
 
-@keyframes expand
+@keyframes hidden-text
   100%
-    transform: scale(100)
-
-// .overlay:active
-//   background-color: rgba(0, 0, 0, .5)
+    transform: translateY(-30vh)
