--- a/src/site.sass
+++ b/src/site.sass
@@ -68,10 +68,12 @@ p
   text-align: justify
 
 .text button
-  width: 10%
+  width: 30%
   margin: auto
   display: flex
   justify-content: center
+  border-radius: 5px
+  border: none
 
 .bottom
   border: 1px solid black
